Use java11 launguage tool for stacks with java11.
Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

--- a/devfiles/java-gradle/devfile.yaml
+++ b/devfiles/java-gradle/devfile.yaml
@@ -11,7 +11,7 @@ projects:
 components:
   -
     type: chePlugin
-    id: redhat/java/latest
+    id: redhat/java11/latest
   -
     type: dockerimage
     alias: gradle
