--- a/devfiles/java-maven/devfile.yaml
+++ b/devfiles/java-maven/devfile.yaml
@@ -8,6 +8,7 @@ projects:
     source:
       type: git
       location: "https://github.com/che-samples/console-java-simple.git"
+      branch: java1.11
 components:
   -
     type: chePlugin
