Adding cpu and memory requests / limits to the openshift template
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/deploy/openshift/che-devfile-registry.yaml
+++ b/deploy/openshift/che-devfile-registry.yaml
@@ -58,7 +58,11 @@ objects:
             periodSeconds: 10
             timeoutSeconds: 3
           resources:
+            requests:
+              cpu: 1m
+              memory: 5Mi
             limits:
+              cpu: 100m
               memory: ${MEMORY_LIMIT}
           envFrom:
           - configMapRef:
