--- a/devfiles/java-lejos/devfile.yaml
+++ b/devfiles/java-lejos/devfile.yaml
@@ -43,7 +43,7 @@ components:
     alias: maven
     memoryLimit: 512Mi
     mountSources: true
-    image: 'quay.io/eclipse/che-java11-maven:nightly'
+    image: quay.io/eclipse/che-java11-maven:nightly
     type: dockerimage
   - id: eclipse/che-theia/next
     type: cheEditor
