Add preLaunchTask into .Net debug configuration
Signed-off-by: svor <vsvydenk@redhat.com>

--- a/devfiles/dotnet/devfile.yaml
+++ b/devfiles/dotnet/devfile.yaml
@@ -68,6 +68,7 @@ commands:
                   "args": [],
                   "name": ".NET Core Launch (console)",
                   "stopAtEntry": false,
+                  "preLaunchTask": "build",
                   "console": "internalConsole"
               }
           ]
