--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -26,6 +26,8 @@ components:
     alias: maven
     image: quay.io/eclipse/che-java8-maven:nightly
     env:
+      - name: MAVEN_CONFIG	
+        value: ""
       - name: MAVEN_OPTS
         value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
