--- a/devfiles/java-mongo/devfile.yaml
+++ b/devfiles/java-mongo/devfile.yaml
@@ -18,6 +18,8 @@ components:
   alias: maven
   image: quay.io/eclipse/che-java8-maven:nightly
   env:
+  - name: MAVEN_CONFIG
+    value: ""
   - name: JAVA_OPTS
     value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
