--- a/devfiles/che4z/meta.yaml
+++ b/devfiles/che4z/meta.yaml
@@ -1,6 +1,6 @@
 ---
 displayName: Mainframe Basic Stack
 description: Mainframe Basic Stack
-tags: ["Che4z", "Zowe", "mainframe", "Endevor", "explorer", "dataset", "COBOL", "JCL", "zOS", "USS"]
+tags: ["Che4z", "Zowe", "mainframe", "Endevor", "explorer", "dataset", "COBOL", "JCL", "zOS", "USS", "HLASM", "InterTest", "debug"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 2280Mi
