--- a/devfiles/quarkus/devfile.yaml
+++ b/devfiles/quarkus/devfile.yaml
@@ -12,7 +12,7 @@ projects:
 components:
   -
     type: chePlugin
-    id: redhat/quarkus/latest
+    id: redhat/quarkus-java8/latest
   -
     type: dockerimage
     alias: maven
