Add docker image volume to mongo container in java-mongo devfile
The mongodb container in the java-mongo devfile mounts a volume, which
causes it to be unrunnable on some OpenShift configurations. For now, we
add an explicit volume mount to allow the workspace to start.

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/java-mongo/devfile.yaml
+++ b/devfiles/java-mongo/devfile.yaml
@@ -63,6 +63,9 @@ components:
       discoverable: 'true'
       public: 'false'
     port: 27017
+  volumes:
+  - name: mongodb_data
+    containerPath: /var/lib/mongodb/data
 commands:
 -
   name: maven build backend
