--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -8,6 +8,7 @@ projects:
     source:
       type: git
       location: "https://github.com/spring-projects/spring-petclinic.git"
+      commitId: 93873665453584deb891569c02e3acc7283cf394
 components:
   -
     type: chePlugin
@@ -43,7 +44,7 @@ components:
       - name: MYSQL_USER
         value: petclinic
       - name: MYSQL_PASSWORD
-        value: password
+        value: petclinic
       - name: MYSQL_DATABASE
         value: petclinic
       - name: PS1
@@ -74,7 +75,7 @@ commands:
         command: |
           SPRING_DATASOURCE_URL=jdbc:mysql://db/petclinic \
           SPRING_DATASOURCE_USERNAME=petclinic \
-          SPRING_DATASOURCE_PASSWORD=password \
+          SPRING_DATASOURCE_PASSWORD=petclinic \
           java -jar -Dspring.profiles.active=mysql \
           -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 \
           target/*.jar
@@ -86,7 +87,8 @@ commands:
       type: exec
       component: mysql
       command: |
-        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/schema.sql &&
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/user.sql &&
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root petclinic < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/schema.sql &&
         echo -e "\e[32mDone.\e[0m Database petclinic was configured!"
   - name: Debug remote java application
     actions:
