--- a/deploy/kubernetes/che-devfile-registry/values.yaml
+++ b/deploy/kubernetes/che-devfile-registry/values.yaml
@@ -18,9 +18,9 @@ cheDevfileImagesOverride:
   # Override for registry URL in images used in devfiles
   url: camino.azurecr.io
   # Override for registry organization in images used in devfiles
-  organization: ""
+  # organization: ""
   # Override for image tags used images referenced in devfiles
-  tag: ""
+  # tag: ""
 
 global:
   ingressDomain: c.pizzafactory.jp
