--- a/.github/workflows/update-to-the-upstream.yml
+++ b/.github/workflows/update-to-the-upstream.yml
@@ -13,7 +13,7 @@ jobs:
     - name: merge-push
       run: |
         git remote add up https://github.com/eclipse/che-devfile-registry.git
-        git fetch --all
+        git fetch --all --unshallow
         git checkout -b prp-update-to-the-upstream
         git merge up/master -m 'Update to the upstream.'
     - name: Push changes
