--- a/.github/workflows/update-to-the-upstream.yml
+++ b/.github/workflows/update-to-the-upstream.yml
@@ -29,7 +29,7 @@ jobs:
         GITHUB_USER: ${{ secrets.GITHUB_USER }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        hub pull-request -b master -m "[Scheduled] Update to the upstream"
+        hub pull-request -b pizzafactory:pizzafactory -m "[Scheduled] Update to the upstream"
     - name: Notify to Google Chat
       uses: Co-qn/google-chat-notification@releases/v1
       with:
