Support sparseCheckoutDir for offline cached projects
Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/quarkus/devfile.yaml
+++ b/devfiles/quarkus/devfile.yaml
@@ -8,7 +8,7 @@ projects:
     source:
       type: git
       location: "https://github.com/quarkusio/quarkus-quickstarts.git"
-      sparseCheckoutDir: /getting-started/
+      sparseCheckoutDir: getting-started
 components:
   -
     type: chePlugin
