Use golang tool with non go modules mod to fix intelligence, because we used sample without go modules.
Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -15,6 +15,9 @@ components:
   id: ms-vscode/go/latest
   alias: go-plugin
   memoryLimit: 512Mi
+  env:
+    - value: 'off'
+      name: GO111MODULE
   preferences:
     go.lintTool: 'golangci-lint'
     go.lintFlags: '--fast'
