Set useLanguageServer preference to true
Fixes issue where Che will complaing about the Go LS
not being up to date.

See eclipse/che#16113

Signed-off-by: Eric Williams <ericwill@redhat.com>

--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -21,6 +21,7 @@ components:
   preferences:
     go.lintTool: 'golangci-lint'
     go.lintFlags: '--fast'
+    go.useLanguageServer: true
 -
   type: dockerimage
   # this version is used in the plugin
