--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -81,7 +81,7 @@ commands:
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}",
-          },
+            "program": "${fileDirname}"
+          }
         ]
       }
