--- a/deploy/kubernetes/che-devfile-registry/values.yaml
+++ b/deploy/kubernetes/che-devfile-registry/values.yaml
@@ -11,6 +11,7 @@ cheDevfileRegistryImage: quay.io/eclipse/che-devfile-registry:nightly
 cheDevfileRegistryImagePullPolicy: Always
 cheDevfileRegistryMemoryLimit: 256Mi
 #cheDevfileRegistryIngressSecretName: che-tls
+#hostnameOverride: che-devfile-registry
 
 cheDevfileImagesOverride:
   # Override for registry URL in images used in devfiles
