--- a/devfiles/java-web-spring/devfile.yaml
+++ b/devfiles/java-web-spring/devfile.yaml
@@ -8,6 +8,7 @@ projects:
     source:
       type: git
       location: "https://github.com/spring-projects/spring-petclinic.git"
+      commitId: 4953f87917b449a404a7f1f4e2457836b9eafbbc
 components:
   -
     type: chePlugin
