--- a/arbitrary-users-patch/Dockerfile
+++ b/arbitrary-users-patch/Dockerfile
@@ -5,6 +5,9 @@ USER 0
 COPY --chown=0:0 entrypoint.sh /
 RUN mkdir -p /home/user && chgrp -R 0 /home && chmod -R g=u /etc/passwd /etc/group /home && chmod +x /entrypoint.sh
 
+COPY install-tooling.sh /tmp
+RUN /tmp/install-tooling.sh && rm -f /tmp/install-tooling.sh
+
 USER 10001
 ENV HOME=/home/user
 WORKDIR /projects
