--- a/devfiles/quarkus-commandmode/devfile.yaml
+++ b/devfiles/quarkus-commandmode/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  generateName: quarkus-commandemode-
+  generateName: quarkus-commandmode-
 projects:
   -
     name: quarkus-quickstarts
