--- a/devfiles/quarkus-command-mode/devfile.yaml
+++ b/devfiles/quarkus-command-mode/devfile.yaml
@@ -55,10 +55,10 @@ commands:
         type: exec
         component: centos-quarkus-maven
         command: >-
-          echo Enter the command arguments;
-          read arguments;
+          read 'Enter your name [Eclipse Che]: ' name
+          name=${name:-'Eclipse Che'}
           set -o xtrace;
-          mvn compile quarkus:dev -Dquarkus.args="$arguments"
+          mvn compile quarkus:dev -Dquarkus.args="$name"
         workdir: ${CHE_PROJECTS_ROOT}/quarkus-quickstarts/getting-started-command-mode
   -
     name: Package Native
@@ -76,10 +76,10 @@ commands:
         type: exec
         component: ubi-minimal
         command: >-
-          echo Enter the command arguments;
-          read arguments;
+          read 'Enter your name [Eclipse Che]: ' name
+          name=${name:-'Eclipse Che'}
           set -o xtrace;
-          ./getting-started-command-mode-1.0-SNAPSHOT-runner $arguments
+          ./getting-started-command-mode-1.0-SNAPSHOT-runner $name
         workdir: ${CHE_PROJECTS_ROOT}/quarkus-quickstarts/getting-started-command-mode/target
   -
     name: Attach remote debugger
