--- a/devfiles/quarkus-command-mode/devfile.yaml
+++ b/devfiles/quarkus-command-mode/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  generateName: quarkus-commandmode-
+  generateName: quarkus-command-mode-
 projects:
   -
     name: quarkus-quickstarts
