--- a/devfiles/quarkus-command-mode/devfile.yaml
+++ b/devfiles/quarkus-command-mode/devfile.yaml
@@ -55,8 +55,8 @@ commands:
         type: exec
         component: centos-quarkus-maven
         command: >-
-          read -p 'Enter your name [Eclipse Che]: ' name
-          name=${name:-'Eclipse Che'}
+          read -p 'Enter your name [Eclipse Che]: ' name;
+          name=${name:-'Eclipse Che'};
           set -o xtrace;
           mvn compile quarkus:dev -Dquarkus.args="$name"
         workdir: ${CHE_PROJECTS_ROOT}/quarkus-quickstarts/getting-started-command-mode
@@ -76,8 +76,8 @@ commands:
         type: exec
         component: ubi-minimal
         command: >-
-          read -p 'Enter your name [Eclipse Che]: ' name
-          name=${name:-'Eclipse Che'}
+          read -p 'Enter your name [Eclipse Che]: ' name;
+          name=${name:-'Eclipse Che'};
           set -o xtrace;
           ./getting-started-command-mode-1.0-SNAPSHOT-runner $name
         workdir: ${CHE_PROJECTS_ROOT}/quarkus-quickstarts/getting-started-command-mode/target
