--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,7 @@ DirectoryIndex README.md
 AddType image/svg+xml svg svgz
 AddEncoding gzip svgz
 
-<FilesMatch "\.(json|yaml|svg|png)$">
+<FilesMatch "\.(json|yaml)$">
 
   <IfModule mod_expires.c>
     ExpiresActive Off
@@ -20,5 +20,12 @@ AddEncoding gzip svgz
     Header set Pragma "no-cache"
     Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
     Header set Expires "Mon, 10 Apr 1972 00:00:00 GMT"
+  </IfModule>
+</FilesMatch>
+
+<FilesMatch "\.(svg|png)$">
+  <IfModule mod_headers.c>
+    Header unset Last-Modified
+    FileETag MTime Size
   </IfModule>
 </FilesMatch>
