--- a/.github/workflows/build-jobs.yml
+++ b/.github/workflows/build-jobs.yml
@@ -16,9 +16,6 @@ on:
 
 jobs:
   nightly-build-push:
-    env:
-      QUAY_ECLIPSE_CHE_USERNAME: ${{ secrets.QUAY_USERNAME }}
-      QUAY_ECLIPSE_CHE_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
     runs-on: ubuntu-latest
     steps:
       - name: Clone source code
@@ -26,5 +23,24 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Build and push image
-        run: /bin/bash cico_build_nightly.sh
+      - name: Login to quay.io
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+
+      - name: Build and push base images
+        run: /bin/bash arbitrary-users-patch/build_images.sh --push
+
+      - name: Build and push happy path image
+        run: /bin/bash arbitrary-users-patch/happy-path/build_happy_path_image.sh --push
+
+      - name: Build and push devfile image
+        run: |
+          SHORT_SHA1=$(git rev-parse --short HEAD)
+          docker build -t che-devfile-registry -f ./build/dockerfiles/Dockerfile --target registry .
+          docker tag che-devfile-registry quay.io/eclipse/che-devfile-registry:nightly
+          docker push quay.io/eclipse/che-devfile-registry:nightly
+          docker tag che-devfile-registry quay.io/eclipse/che-devfile-registry:${SHORT_SHA1}
+          docker push quay.io/eclipse/che-devfile-registry:${SHORT_SHA1}
