use java8 plugin instead of java
Signed-off-by: svor <vsvydenk@redhat.com>

--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -19,7 +19,7 @@ components:
     memoryLimit: 260Mi
   -
     type: chePlugin
-    id: redhat/java/latest
+    id: redhat/java8/latest
     memoryLimit: 1360Mi
   -
     type: dockerimage
