--- a/devfiles/java-mongo/devfile.yaml
+++ b/devfiles/java-mongo/devfile.yaml
@@ -11,7 +11,7 @@ projects:
 components:
 -
   type: chePlugin
-  id: redhat/java/latest
+  id: redhat/java8/latest
   memoryLimit: 1280Mi
 -
   type: dockerimage
