Add preference to not have the vscode-java prompt
Signed-off-by: svor <vsvydenk@redhat.com>

--- a/devfiles/java-gradle/devfile.yaml
+++ b/devfiles/java-gradle/devfile.yaml
@@ -13,6 +13,8 @@ components:
   -
     type: chePlugin
     id: redhat/java11/latest
+    preferences:
+      java.server.launchMode: Standard
   -
     type: dockerimage
     alias: gradle
