--- a/devfiles/java-web-spring/devfile.yaml
+++ b/devfiles/java-web-spring/devfile.yaml
@@ -12,7 +12,7 @@ projects:
 components:
   -
     type: chePlugin
-    id: redhat/java11/latest
+    id: redhat/java/latest
     memoryLimit: 1512Mi
     preferences:
       java.server.launchMode: Standard
