Make java debug port private for all Java devfiles
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -47,6 +47,10 @@ components:
     endpoints:
       - name: '8080-tcp'
         port: 8080
+      - name: 'debug'
+        port: 5005
+        attributes:
+          public: 'false'
     mountSources: true
 commands:
   -
