--- a/devfiles/quarkus-command-mode/devfile.yaml
+++ b/devfiles/quarkus-command-mode/devfile.yaml
@@ -71,7 +71,7 @@ commands:
       -
         type: exec
         component: centos-quarkus-maven
-        command: "mvn package -Dnative -Dmaven.test.skip"
+        command: "mvn package -Dnative -Dmaven.test.skip -Dquarkus.native.native-image-xmx=2G"
         workdir: ${CHE_PROJECTS_ROOT}/quarkus-quickstarts/getting-started-command-mode
 
   -
