--- a/devfiles/quarkus/devfile.yaml
+++ b/devfiles/quarkus/devfile.yaml
@@ -55,6 +55,14 @@ components:
     command: ['tail']
     args: ['-f', '/dev/null']
 
+  - id: redhat/vscode-didact/latest
+    preferences:
+      didact.defaultUrl: "{{ DEVFILE_REGISTRY_URL }}/devfiles/quarkus/didact.md"
+      che.welcome.enable: false
+      didact.openDefaultTutorialAtStartup: true
+    type: chePlugin
+    alias: didact-plugin
+
 commands:
   -
     name: Package
