--- a/deploy/kubernetes/che-devfile-registry/templates/deployment.yaml
+++ b/deploy/kubernetes/che-devfile-registry/templates/deployment.yaml
@@ -15,6 +15,7 @@ metadata:
     app: che
     component: devfile-registry
     app.kubernetes.io/name: che
+    app.kubernetes.io/component: devfile-registry
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
@@ -35,6 +36,11 @@ spec:
       labels:
         app: che
         component: devfile-registry
+        app.kubernetes.io/name: che
+        app.kubernetes.io/component: devfile-registry
+        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/managed-by: {{ .Release.Service }}
+        helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     spec:
       containers:
       - image: {{ .Values.cheDevfileRegistryImage }}
@@ -58,11 +64,17 @@ spec:
           initialDelaySeconds: 3
           periodSeconds: 10
           timeoutSeconds: 3
+        securityContext:
+          capabilities:
+            drop:
+              - ALL
         resources:
           limits:
             memory: {{ .Values.cheDevfileRegistryMemoryLimit }}
+            cpu: 500m
           requests:
-            memory: 256Mi
+            memory: 32Mi
+            cpu: 100m
         envFrom:
           - configMapRef:
               name: che-devfile-registry
